# nyan-agent

./: .gitignore  AGENTS.md  README.md  package.json  skills-lock.json
.agents/docs/: 00-index.md  01-state.md  02-handoff.md  03-product.md  04-technical-plan.md
apps/agent/: package.json  tsconfig.json
apps/agent/src/: agent-runner.test.ts  agent-runner.ts  backend.test.ts  backend.ts  config.test.ts  config.ts  edit.test.ts  edit.ts  files.ts  main.ts  models.ts  paths.ts  projects.test.ts  projects.ts  providers.ts  runtime-logging.test.ts  runtime-logging.ts  sessions.test.ts  sessions.ts  shell.test.ts  shell.ts  state.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  PromptEditor.tsx  Titlebar.tsx  backendState.test.ts  backendState.ts  globals.css  listVisibility.test.ts  listVisibility.ts  main.tsx  sessionState.test.ts  sessionState.ts  transcript.test.ts  transcript.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: backend.rs  lib.rs  ndjson.rs  protocol.rs
apps/desktop/src-tauri/src/platform/: bootstrap.rs  mica.rs  mod.rs  windows.rs
docs/: README.md  architecture.md  mica.md  product.md
e2e/: tsconfig.json  wdio.conf.ts
e2e/fixtures/: fault-agent.ts
e2e/specs/: product-shell.e2e.ts
scripts/: dev-inspect.ts  e2e.ts  smoke-agent-artifact.ts
src/: App.tsx
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
